--- a/server/static/css/app.css
+++ b/server/static/css/app.css
@@ -98,7 +98,6 @@ h2 {
 	text-align: center;
 	border-radius: 5px;
 }
-
 .result{
 		background: #dcd686;
 		width: 76%;
@@ -111,7 +110,7 @@ h2 {
 }
 
 .img {
-  background: url('https://images.unsplash.com/photo-1564013799919-ab600027ffc6?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80');
+  background: url('https://images.pexels.com/photos/1029599/pexels-photo-1029599.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');
 	background-repeat: no-repeat;
   background-size: auto;
   background-size:100% 100%;
