--- a/server/static/css/app.css
+++ b/server/static/css/app.css
@@ -130,3 +130,15 @@ h2 {
 body, html {
   height: 100%;
 }
+.button {
+      display: inline-block;
+      padding: 10px 20px;
+      background-color: #007bff;
+      color: #fff;
+      text-decoration: none;
+      border-radius: 5px;
+    }
+
+    .button:hover {
+      background-color: #0069d9;
+    }
