--- a/server/templates/app.html
+++ b/server/templates/app.html
@@ -1,19 +1,45 @@
-{% extends "base.html" %} {% block title %}Banglore Home Price Prediction{% endblock %} 
+<!DOCTYPE html>
+<html>
 <head>
-	{% block title %}
     <title>Banglore Home Price Prediction</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="{{url_for('static', filename='js/app.js')}}"></script>
-	<link rel= "stylesheet" href= "{{ url_for('static',filename='css/app.css')}}">{% endblock %}
+	<link rel= "stylesheet" href= "{{ url_for('static',filename='css/app.css')}}">
+	<meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+    crossorigin="anonymous"/>
 	<!-- <link rel="stylesheet" href="app.css"> -->
+	<title>Login</title>
 </head>
 <body>
-	{% block content
-		%}
 <div class="img"></div>
-
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbar"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbar">
+        <div class="navbar-nav">
+          <a class="nav-item nav-link" id="home" href="/">Home</a>
+          <a class="nav-item nav-link" id="login" href="/login">Login</a>
+          <a class="nav-item nav-link" id="signup" href="/signup">Sign Up</a>
+        </div>
+      </div>
+    </div>
+  </nav>
+  <div class="container">
 <form class="form">
-	<h2>Area (Square Feet)</h2>
+	<h2>Area(Sq. Feet)</h2>
     <input class="area"  type="text" id="uiSqft" class="floatLabel" name="Squareft" value="1000">
 	<h2>BHK</h2>
 	<div class="switch-field">
@@ -53,6 +79,10 @@
 </div>
 	<button class="submit" onclick="onClickedEstimatePrice()" type="button">Estimate Price</button>
 	<div id="uiEstimatedPrice" class="result">	<h2></h2> </div>
-	{% endblock %}
+
+<!-- <div>
+	<a href="/login" class="button">Login</a>
+	<a href="/signup" class="button">Signup</a>
+</div> -->
 </body>
 </html>
