--- a/server/templates/base.html
+++ b/server/templates/base.html
@@ -1,5 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -10,6 +8,7 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+    {% block head%}{% endblock %}
     <title>{% block title %}{% endblock %}</title>
   </head>
   <body>
@@ -25,9 +24,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbar">
           <div class="navbar-nav">
-            <a class="nav-item nav-link" href="/home">Home</a>
-            <a class="nav-item nav-link" href="/login">Login</a>
-            <a class="nav-item nav-link" href="/sign-up">Sign Up</a>
+            <a class="nav-item nav-link" id="home" href="{{ url_for('home') }}">Home</a>
+            <a class="nav-item nav-link" id="login" href="{{ url_for('login') }}">Login</a>
+            <a class="nav-item nav-link" id="signup" href="{{ url_for('signup') }}">Sign Up</a>
           </div>
         </div>
       </div>
