--- a/server/templates/signup.html
+++ b/server/templates/signup.html
@@ -1,44 +1,21 @@
-{% extends "base.html" %} {% block title %}Sign Up{% endblock %} {% block
-    content %}
-    <form method="POST">
-      <h3 align="center">Sign Up</h3>
-      <div class="form-group">
-        <label for="email">Email Address</label>
-        <input
-          type="text"
-          id="email"
-          name="email"
-          class="form-control"
-          placeholder="Enter Email"
-        />
-        <label for="username">Username</label>
-        <input
-          type="text"
-          id="username"
-          name="username"
-          class="form-control"
-          placeholder="Enter Username"
-        />
-        <label for="password1">Password</label>
-        <input
-          type="password"
-          id="password1"
-          name="password1"
-          class="form-control"
-          placeholder="Enter Password"
-        />
-        <label for="password2">Password Again</label>
-        <input
-          type="password"
-          id="password2"
-          name="password2"
-          class="form-control"
-          placeholder="Enter Password Again"
-        />
-        <br />
-        <div align="center">
-          <button class="btn btn-primary" type="submit">Sign Up</button>
+{% extends 'base.html'%}
+{% block title %}Signup{% endblock %}
+{% block content %}
+  <div class="container">
+    <div class="mt-5">
+      <form method="POST" action="">
+        {{ form.hidden_tag() }}
+        <div class="mb-3">
+            {{ form.username.label }} {{ form.username }}
         </div>
-      </div>
-    </form>
-    {% endblock %}
+        <div class="mb-3">
+            {{ form.password.label }} {{ form.password }}
+        </div>
+        <div class="mb-3">
+          {{ form.submit }}
+        </div>
+      </form>
+      <p>Already have an account? <a href="{{ url_for('login') }}">Log In</a></p>
+    </div>
+  </div>
+{% endblock %}
