--- a/server/templates/app.html
+++ b/server/templates/app.html
@@ -24,8 +24,7 @@
         class="navbar-toggler"
         type="button"
         data-bs-toggle="collapse"
-        data-bs-target="#navbar"
-      >
+        data-bs-target="#navbar">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbar">
@@ -37,6 +36,7 @@
       </div>
     </div>
   </nav>
+  <h1>Predict House Price {{username}}</h1>
   <div class="container">
 <form class="form">
 	<h2>Area(Sq. Feet)</h2>
