--- a/server/templates/base.html
+++ b/server/templates/base.html
@@ -27,6 +27,7 @@
             <a class="nav-item nav-link" id="home" href="{{ url_for('home') }}">Home</a>
             <a class="nav-item nav-link" id="login" href="{{ url_for('login') }}">Login</a>
             <a class="nav-item nav-link" id="signup" href="{{ url_for('signup') }}">Sign Up</a>
+            <a class="nav-item nav-link" id="logout" href="{{ url_for('logout') }}">Logout</a>
           </div>
         </div>
       </div>
