--- a/server/templates/app.html
+++ b/server/templates/app.html
@@ -1,88 +1,74 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Banglore Home Price Prediction</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="{{url_for('static', filename='js/app.js')}}"></script>
-	<link rel= "stylesheet" href= "{{ url_for('static',filename='css/app.css')}}">
-	<meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-    crossorigin="anonymous"/>
-	<!-- <link rel="stylesheet" href="app.css"> -->
-	<title>Login</title>
-</head>
-<body>
+{% extends 'base.html' %} {% block head%}
+<title>Banglore Home Price Prediction</title>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="{{url_for('static', filename='js/app.js')}}"></script>
+<link rel="stylesheet" href="{{ url_for('static',filename='css/app.css')}}" />
+<meta charset="UTF-8" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+	integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+{% endblock %} {% block content %}
 <div class="img"></div>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#navbar">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbar">
-        <div class="navbar-nav">
-          <a class="nav-item nav-link" id="home" href="/">Home</a>
-          <a class="nav-item nav-link" id="login" href="/login">Login</a>
-          <a class="nav-item nav-link" id="signup" href="/signup">Sign Up</a>
-        </div>
-      </div>
-    </div>
-  </nav>
-  <h1>Predict House Price {{username}}</h1>
-  <div class="container">
-<form class="form">
-	<h2>Area(Sq. Feet)</h2>
-    <input class="area"  type="text" id="uiSqft" class="floatLabel" name="Squareft" value="1000">
-	<h2>BHK</h2>
-	<div class="switch-field">
-		<input type="radio" id="radio-bhk-1" name="uiBHK" value="1"/>
-		<label for="radio-bhk-1">1</label>
-		<input type="radio" id="radio-bhk-2" name="uiBHK" value="2" checked/>
-		<label for="radio-bhk-2">2</label>
-		<input type="radio" id="radio-bhk-3" name="uiBHK" value="3"/>
-		<label for="radio-bhk-3">3</label>
-		<input type="radio" id="radio-bhk-4" name="uiBHK" value="4"/>
-		<label for="radio-bhk-4">4</label>
-		<input type="radio" id="radio-bhk-5" name="uiBHK" value="5"/>
-		<label for="radio-bhk-5">5</label>
-	</div>
-	</form>
-<form class="form">
-	<h2>Bath</h2>
-	<div class="switch-field">
-		<input type="radio" id="radio-bath-1" name="uiBathrooms" value="1"/>
-		<label for="radio-bath-1">1</label>
-		<input type="radio" id="radio-bath-2" name="uiBathrooms" value="2" checked/>
-		<label for="radio-bath-2">2</label>
-		<input type="radio" id="radio-bath-3" name="uiBathrooms" value="3"/>
-		<label for="radio-bath-3">3</label>
-		<input type="radio" id="radio-bath-4" name="uiBathrooms" value="4"/>
-		<label for="radio-bath-4">4</label>
-		<input type="radio" id="radio-bath-5" name="uiBathrooms" value="5"/>
-		<label for="radio-bath-5">5</label>
-	</div>
-		<h2>Location</h2>
-	<div>
-  <select class="location" name="" id="uiLocations">
-    <option value="" disabled="disabled" selected="selected">Choose a Location</option>
-		<option>Electronic City</option>
-        <option>Rajaji Nagar</option>
-  </select>
 </div>
-	<button class="submit" onclick="onClickedEstimatePrice()" type="button">Estimate Price</button>
-	<div id="uiEstimatedPrice" class="result">	<h2></h2> </div>
+	<div class="container-fluid">
+	  <div class="collapse navbar-collapse" id="navbar">
+		<div class="navbar-nav">
+		  <a class="nav-item nav-link" id="username">User: {{username}}</a>
+		</div>
+	  </div>
+	</div>
 
-<!-- <div>
-	<a href="/login" class="button">Login</a>
-	<a href="/signup" class="button">Signup</a>
-</div> -->
-</body>
-</html>
+
+
+<div class="container">
+	<form class="form">
+		<h2>Area(Sq. Feet)</h2>
+		<input class="area" type="text" id="uiSqft" class="floatLabel" name="Squareft" value="1000" />
+		<h2>BHK</h2>
+		<div class="switch-field">
+			<input type="radio" id="radio-bhk-1" name="uiBHK" value="1" />
+			<label for="radio-bhk-1">1</label>
+			<input type="radio" id="radio-bhk-2" name="uiBHK" value="2" checked />
+			<label for="radio-bhk-2">2</label>
+			<input type="radio" id="radio-bhk-3" name="uiBHK" value="3" />
+			<label for="radio-bhk-3">3</label>
+			<input type="radio" id="radio-bhk-4" name="uiBHK" value="4" />
+			<label for="radio-bhk-4">4</label>
+			<input type="radio" id="radio-bhk-5" name="uiBHK" value="5" />
+			<label for="radio-bhk-5">5</label>
+		</div>
+	</form>
+	<form class="form">
+		<h2>Bath</h2>
+		<div class="switch-field">
+			<input type="radio" id="radio-bath-1" name="uiBathrooms" value="1" />
+			<label for="radio-bath-1">1</label>
+			<input type="radio" id="radio-bath-2" name="uiBathrooms" value="2" checked />
+			<label for="radio-bath-2">2</label>
+			<input type="radio" id="radio-bath-3" name="uiBathrooms" value="3" />
+			<label for="radio-bath-3">3</label>
+			<input type="radio" id="radio-bath-4" name="uiBathrooms" value="4" />
+			<label for="radio-bath-4">4</label>
+			<input type="radio" id="radio-bath-5" name="uiBathrooms" value="5" />
+			<label for="radio-bath-5">5</label>
+		</div>
+		<h2>Location</h2>
+		<div>
+			<select class="location" name="" id="uiLocations">
+				<option value="" disabled="disabled" selected="selected">
+					Choose a Location
+				</option>
+				<option>Electronic City</option>
+				<option>Rajaji Nagar</option>
+			</select>
+		</div>
+		<button class="submit" onclick="onClickedEstimatePrice()" type="button">
+			Estimate Price
+		</button>
+		<div id="uiEstimatedPrice" class="result">
+			<h2></h2>
+		</div>
+	</form>
+</div>
+{% endblock %}
