--- a/server/templates/base.html
+++ b/server/templates/base.html
@@ -10,25 +10,33 @@
   </head>
 
   <body>
-    <div class="img"></div>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container-fluid">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbar">
-          <div class="navbar-nav">
-            <a class="nav-item nav-link" id="home" href="{{ url_for('home') }}">Home</a>
-            <a class="nav-item nav-link" id="login" href="{{ url_for('login') }}">Login</a>
-            <a class="nav-item nav-link" id="signup" href="{{ url_for('signup') }}">Sign Up</a>
-          </div>
+  <div class="img"></div>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbar">
+        <div class="navbar-nav">
+          <a class="nav-item nav-link" id="home" href="{{ url_for('dashboard') }}">Home</a>
+          {% if current_user.is_authenticated %}
+          <a class="nav-item nav-link" id="username" href="home">{{ current_user.username }}</a>
+          <a class="nav-item nav-link" id="logout" href="{{ url_for('logout') }}">Logout</a>
+          {% else %}
+          <a class="nav-item nav-link" id="login" href="{{ url_for('login') }}">Login</a>
+          <a class="nav-item nav-link" id="signup" href="{{ url_for('signup') }}">Sign Up</a>
+          {% endif %}
         </div>
       </div>
-    </nav>
-    <div class="container">{% block content %}{% endblock %}</div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
-    </script>
-  </body>
+    </div>
+  </nav>
+  <div class="container">
+    {% block content %}{% endblock %}
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+  </script>
+</body>
+
 
   </html>
