--- a/server/templates/signup.html
+++ b/server/templates/signup.html
@@ -1,21 +1,47 @@
-{% extends 'base.html'%}
+{% extends 'base.html' %}
 {% block title %}Signup{% endblock %}
+
+{% block styles %}
+<style>
+  body {
+    background-size: cover;
+    background-position: center;
+  }
+
+  .signup-container {
+    background-color: rgba(255, 255, 255, 0.8);
+    padding: 20px;
+    border-radius: 5px;
+    margin-top: 50px;
+    top: 100px;
+  }
+
+  .signup-container h1 {
+    text-align: center;
+    margin-bottom: 30px;
+  }
+</style>
+{% endblock %}
+
 {% block content %}
-  <div class="container">
-    <div class="mt-5">
+<div class="container">
+  <div class="row">
+    <div class="col-md-6 offset-md-3 signup-container">
+      <h1>Signup</h1>
       <form method="POST" action="">
         {{ form.hidden_tag() }}
         <div class="mb-3">
-            {{ form.username.label }} {{ form.username }}
+          {{ form.username.label }} {{ form.username(class="form-control") }}
         </div>
         <div class="mb-3">
-            {{ form.password.label }} {{ form.password }}
+          {{ form.password.label }} {{ form.password(class="form-control") }}
         </div>
         <div class="mb-3">
-          {{ form.submit }}
+          {{ form.submit(class="btn btn-primary") }}
         </div>
       </form>
       <p>Already have an account? <a href="{{ url_for('login') }}">Log In</a></p>
     </div>
   </div>
+</div>
 {% endblock %}
