--- a/server/templates/base.html
+++ b/server/templates/base.html
@@ -1,9 +1,11 @@
-  <head>
+  <head>{%block styles %}{%endblock %}
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>      
     <link rel="stylesheet" href="{{ url_for('static',filename='css/app.css')}}" />
     {% block head%}{% endblock %}
     <title>{% block title %}{% endblock %}</title>
@@ -20,8 +22,9 @@
         <div class="navbar-nav">
           <a class="nav-item nav-link" id="home" href="{{ url_for('dashboard') }}">Home</a>
           {% if current_user.is_authenticated %}
-          <a class="nav-item nav-link" id="username" href="home">{{ current_user.username }}</a>
-          <a class="nav-item nav-link" id="logout" href="{{ url_for('logout') }}">Logout</a>
+          <a class="nav-item nav-link" id="username" href={{url_for('home')}}>{{ current_user.username }}</a>
+            <a class="nav-item nav-link" id="userprofile" href="{{ url_for('user', username=current_user.username)}}">Profile</a>
+          <a class="nav-item nav-link" id="logout" href="{{ url_for('logout')}}">Logout</a>
           {% else %}
           <a class="nav-item nav-link" id="login" href="{{ url_for('login') }}">Login</a>
           <a class="nav-item nav-link" id="signup" href="{{ url_for('signup') }}">Sign Up</a>
