--- a/server/templates/login.html
+++ b/server/templates/login.html
@@ -44,6 +44,10 @@
         </div>
       </form>
       <p>Don't have an account? <a href="{{ url_for('signup') }}">Sign Up</a></p>
+      <!-- <p> -->
+        <!-- Forgot Your Password? -->
+        <!-- <a>Click to Reset It</a> -->
+    <!-- </p> -->
     </div>
   </div>
 </div>
