--- a/server/templates/base.html
+++ b/server/templates/base.html
@@ -22,9 +22,10 @@
         <div class="navbar-nav">
           <a class="nav-item nav-link" id="home" href="{{ url_for('dashboard') }}">Home</a>
           {% if current_user.is_authenticated %}
-          <a class="nav-item nav-link" id="username" href={{url_for('home')}}>{{ current_user.username }}</a>
+          <a class="nav-item nav-link" id="username" href={{url_for('home')}}>Prediction</a>
           <a class="nav-item nav-link" id="explore" href="{{ url_for('explore') }}">Explore</a>
-            <a class="nav-item nav-link" id="userprofile" href="{{ url_for('user', username=current_user.username)}}">Profile</a>
+          <a class="nav-item nav-link" id="index" href="{{ url_for('index') }}">{{ current_user.username }}</a>
+          <a class="nav-item nav-link" id="userprofile" href="{{ url_for('user', username=current_user.username)}}">Profile</a>
           <a class="nav-item nav-link" id="logout" href="{{ url_for('logout')}}">Logout</a>
           {% else %}
           <a class="nav-item nav-link" id="login" href="{{ url_for('login') }}">Login</a>
