--- a/server/templates/base.html
+++ b/server/templates/base.html
@@ -1,52 +1,49 @@
-  <head>{%block styles %}{%endblock %}
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>      
-    <link rel="stylesheet" href="{{ url_for('static',filename='css/app.css')}}" />
-    {% block head%}{% endblock %}
-    <title>{% block title %}{% endblock %}</title>
-  </head>
+<head>{%block styles %}{%endblock %}
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>      
+  <link rel="stylesheet" href="{{ url_for('static',filename='css/app.css')}}" />
+  {% block head%}{% endblock %}
+  <title>{% block title %}{% endblock %}</title>
+</head>
 
-  <body>
-  <div class="img"></div>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbar">
-        <div class="navbar-nav">
-          <a class="nav-item nav-link" id="home" href="{{ url_for('dashboard') }}">Home</a>
-          {% if current_user.is_authenticated %}
-<<<<<<< Updated upstream
-=======
-          <a class="nav-item nav-link" id="username" href="home">{{ current_user.username }}</a>
-          <a class="nav-item nav-link" id="logout" href="{{ url_for('logout') }}">Logout</a>
->>>>>>> Stashed changes
-          <a class="nav-item nav-link" id="username" href={{url_for('home')}}>Prediction</a>
-          <a class="nav-item nav-link" id="explore" href="{{ url_for('explore') }}">Explore</a>
-          <a class="nav-item nav-link" id="index" href="{{ url_for('index') }}">{{ current_user.username }}</a>
-          <a class="nav-item nav-link" id="userprofile" href="{{ url_for('user', username=current_user.username)}}">Profile</a>
-          <a class="nav-item nav-link" id="logout" href="{{ url_for('logout')}}">Logout</a>
-          {% else %}
-          <a class="nav-item nav-link" id="login" href="{{ url_for('login') }}">Login</a>
-          <a class="nav-item nav-link" id="signup" href="{{ url_for('signup') }}">Sign Up</a>
-          {% endif %}
-        </div>
+<body>
+<div class="img"></div>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container-fluid">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbar">
+      <div class="navbar-nav">
+        <a class="nav-item nav-link" id="home" href="{{ url_for('dashboard') }}">Home</a>
+        {% if current_user.is_authenticated %}
+        <a class="nav-item nav-link" id="username" href="home">{{ current_user.username }}</a>
+        <a class="nav-item nav-link" id="username" href={{url_for('home')}}>Prediction</a>
+        <a class="nav-item nav-link" id="explore" href="{{ url_for('explore') }}">Explore</a>
+        <a class="nav-item nav-link" id="index" href="{{ url_for('index') }}">Create_Post</a>
+        <a class="nav-item nav-link" id="userprofile" href="{{ url_for('user', username=current_user.username)}}">{{ current_user.username }}</a>
+        <a class="nav-item nav-link" id="logout" href="{{ url_for('joinroom')}}">JoinRoom</a>
+        <a class="nav-item nav-link" id="logout" href="{{ url_for('logout')}}">Logout</a>
+        {% else %}
+        <a class="nav-item nav-link" id="login" href="{{ url_for('login') }}">Login</a>
+        <a class="nav-item nav-link" id="signup" href="{{ url_for('signup') }}">Sign Up</a>
+        {% endif %}
       </div>
     </div>
-  </nav>
-  <div class="container">
-    {% block content %}{% endblock %}
   </div>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
-  </script>
+</nav>
+<div class="container">
+  {% block content %}{% endblock %}
+</div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+</script>
 </body>
 
 
-  </html>
+</html>
