Final with Chatroom

--- a/server/templates/dashboard.html
+++ b/server/templates/dashboard.html
@@ -11,8 +11,10 @@
     </style>
 
     <header>
-        <h1>House Price Prediction</h1>
-        <p>This project aims to develop a web application for house price prediction, providing accurate and intuitive predictions for potential home buyers or sellers. The application utilizes machine learning models trained on a house price dataset, along with data cleaning, outlier detection, and exploratory data analysis (EDA) techniques to ensure accurate predictions and reliable results.</p>
+        <h1>HouseX</h1>
+        <p>This project aims to develop a web application for house price prediction, providing accurate and intuitive predictions for potential home buyers or sellers. The application utilizes machine learning models trained on a house price dataset, along with data cleaning, outlier detection, and exploratory data analysis (EDA) techniques to ensure accurate predictions and reliable results.
+            Also iT provide platform for users to List house online for sell and see those houses if they want to purchase them.
+        </p>
     </header>
 
     <section id="features">
