--- a/server/templates/room.html
+++ b/server/templates/room.html
@@ -22,7 +22,7 @@ href="{{url_for('static', filename='css/style.css')}}"
       name="message"
       id="message"
     />
-    <button type="button" name="send" id="send-btn" ">
+    <button type="button" name="send" id="send-btn" onClick="sendMessage()">
       Send
     </button>
   </div>
